Add an option to not automatically add BOM (#701)
* Add an option to not automatically add BOM

This option has (at least) a couple use cases:

1. the issue described in #681, when a user wants to drive the
Micronaut version from a catalog, or directly in their dependencies
(although this is probably redundant with #694)

2. we use the Gradle plugins in our module builds, where it's going
to look for the platform BOM, which is not necessarily what we
want, since we want to use local versions of projects and possibly
override transitive versions

Closes #681

* Add documentation